--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "editor.formatOnSave": true,
-  "editor.tabSize": 4
+  "editor.tabSize": 4,
+  "[html]": {
+    "editor.formatOnSave": false
+  }
 }
