--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "konva": "^7.2.2",
+    "sweetalert2": "^10.14.0",
     "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
