--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "konva": "^7.2.2",
+    "postcss": "^8.2.5",
     "sweetalert2": "^10.14.0",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
